# tailor_talk

./: .gitignore  README.md  main.py  pyproject.toml
backend/: download_dataset.py
backend/app/: agent_logic.py  main.py  schemas.py  utils.py
frontend/: app.py  requirements.txt
