[project]
name = "tailortalk"
version = "0.1.0"
description = "A friendly chatbot that can analyze the famous Titanic dataset. Users should be able to ask questions in plain English and get both text answers and visual insights about the passengers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "langchain>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-openai>=0.2.0",
    "pandas>=2.2.0,<3.0.0",
    "streamlit>=1.35.0",
    "altair>=5.3.0",
    "pillow>=10.3.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.8",
    "kagglehub>=0.3.0",
]

[tool.uv]
managed = true
